--- a/src/AIConductor.GUI/AIConductor.GUI.csproj
+++ b/src/AIConductor.GUI/AIConductor.GUI.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Plugins\readme.md">
+    <None Update="Plugins\README.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
